--- a/styles/section-card.module.css
+++ b/styles/section-card.module.css
@@ -1,27 +1,21 @@
-.sectionList {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  /* width: 90vw; */
-}
-
-.sectionCard {
+.card {
   --wide: clamp(300px, 90vw, 720px);
+  cursor: pointer;
   display: flex;
   flex-direction: column;
-  margin-block: 3rem;
-  cursor: pointer;
+  justify-content: center;
+  /* margin-block: 3rem; */
   width: var(--wide);
 }
 
-.sectionImage {
+.image {
   height: var(--wide);
   /* max-width: 90vw; */
   position: relative;
   width: 100%;
 }
 
-.sectionId {
+.id {
   background-color: rgba(0, 0, 0, 0.35);
   color: white;
   padding: 1rem;
@@ -32,28 +26,21 @@
   width: 100%;
   z-index: 2;
 }
-.sectionTitle {
+
+.title {
   /* font-size: 2rem; */
   font-size: 3rem;
   margin: 0;
   padding: 0;
 }
-.collectionTitle {
-  font-size: 5rem;
-  line-height: 4rem;
-}
-.sectionSubtitle {
-  font-size: 1.4rem;
-  margin: 0;
-  padding: 0;
-}
+
 .blogTitle {
   font-size: 1.5rem;
   /* padding-left: 1rem; */
   text-align: left;
 }
 
-.sectionCaption {
+.caption {
   margin: 0;
   padding-top: 0.2rem;
 }
