--- a/styles/collection-card.module.css
+++ b/styles/collection-card.module.css
@@ -2,11 +2,10 @@
 }
 
 .card {
-  --wide: clamp(300px, 100vw, 720px);
-  cursor: pointer;
-  display: flex;
-  flex-direction: column;
-  margin: 0 auto;
+  /* cursor: pointer; */
+  /* display: flex; */
+  /* flex-direction: column; */
+  /* margin: 0 auto; */
   max-width: 960px;
   width: 100%;
 }
