--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,11 +1,10 @@
-.sectionList {
-  align-items: center;
+.homePage {
   display: flex;
   flex-direction: column;
 }
 
-.cover {
-  background-color: lightgray;
-  height: 100vh;
-  width: 100vw;
+.sectionList {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
 }
