--- a/styles/cover.module.css
+++ b/styles/cover.module.css
@@ -11,7 +11,7 @@
   color: white;
   grid-column-start: 1;
   grid-column-end: 1;
-  z-index: 2;
+  z-index: 1;
 }
 
 .title {
@@ -21,7 +21,7 @@
   position: relative;
   top: 40vh;
   width: 80vw;
-  z-index: 3;
+  /* z-index: 3; */
 }
 
 .subtitle {
