--- a/styles/header.module.css
+++ b/styles/header.module.css
@@ -1,10 +1,13 @@
 .header {
-  align-items: center;
+  /* align-items: center; */
   display: flex;
   justify-content: space-between;
-  /* left: 0px; */
-  padding: 0.5rem 2rem;
-  /* position: sticky; */
-  /* top: 0px; */
+  padding: 0.5rem 1rem;
   z-index: 9;
+}
+
+.logo {
+  height: 40px;
+  padding: 4px 0;
+  transform: scale(0.8);
 }
