--- a/components/header/header.module.css
+++ b/components/header/header.module.css
@@ -1,13 +1,26 @@
-.header {
-  /* align-items: center; */
+/* .header {
   display: flex;
   justify-content: space-between;
   padding: 0.5rem 1rem;
+  padding-inline: 1rem;
   z-index: 9;
+} */
+
+.header {
+  background-color: lightyellow;
+  display: flex;
+  justify-content: space-between;
+  /* left: 0; */
+  padding: 0.5rem 1rem;
+  /* position: sticky; */
+  /* right: 0; */
+  /* top: 0; */
+  /* width: 100%; */
+  /* z-index: 9; */
 }
 
 .logo {
   height: 40px;
-  padding: 4px 0;
+  /* padding: 4px 0; */
   transform: scale(0.8);
 }
