--- a/components/header/hamburger.module.css
+++ b/components/header/hamburger.module.css
@@ -1,6 +1,6 @@
 .hamburger {
   padding: 0;
-  display: inline-block;
+  /* display: inline-block; */
   cursor: pointer;
   transition-property: opacity, filter;
   transition-duration: 0.15s;
@@ -11,7 +11,8 @@
   background-color: transparent;
   border: 0;
   margin: 0;
-  /* overflow: visible; */
+  height: 40px;
+  /* overflow: hidden; */
 }
 .hamburger:hover {
   opacity: 0.7;
