--- a/components/nav/modal.module.css
+++ b/components/nav/modal.module.css
@@ -5,7 +5,7 @@
   display: flex;
   justify-content: center;
   left: 0;
-  padding-top: 56px;
+  /* padding-top: 56px; */
   position: fixed;
   right: 0;
   top: 0;
@@ -18,6 +18,13 @@
   color: black;
   height: 100%;
   padding: 1rem;
-  position: relative;
+  position: fixed;
+  top: 56px;
   width: 100%;
+}
+
+@media (min-width: 600px) {
+  .modal {
+    max-height: 40%;
+  }
 }
