--- a/components/header/desktop-nav/header-desktop.module.css
+++ b/components/header/desktop-nav/header-desktop.module.css
@@ -3,13 +3,14 @@
   display: flex;
   flex: 1 0 0;
   justify-content: space-between;
-  /* padding: 0.5rem 1rem; */
+  /* padding: 0.5rem 0; */
   /* padding-inline: 1rem; */
   /* z-index: 9; */
 }
 
 .logo {
   height: 40px;
-  /* padding: 4px 0; */
+  margin: 0.5rem 0;
+  /* padding: 0.5rem 0; */
   /* transform: scale(0.8); */
 }
