--- a/components/header/header.module.css
+++ b/components/header/header.module.css
@@ -9,9 +9,10 @@
 .header {
   background-color: lightyellow;
   display: flex;
+  height: 56px;
   justify-content: space-between;
   /* left: 0; */
-  padding: 0.5rem 1rem;
+  padding: 0 1rem;
   /* position: sticky; */
   /* right: 0; */
   /* top: 0; */
