--- a/components/header/desktop-nav/desktop-nav.module.css
+++ b/components/header/desktop-nav/desktop-nav.module.css
@@ -22,36 +22,62 @@
   width: 10vw;
 }
 
-.viewport {
-  background-color: azure;
-  /* border-radius: 6px; */
-  height: 40vh;
+.viewportContainer {
+  /* height: 40vh; */
   left: 0;
-  /* margin-top: 10px; */
-  overflow: hidden;
   position: fixed;
   top: 58px;
   transform-origin: top center;
   width: 100%;
-  /* z-index: 2; */
-  /* box-shadow: hsl(206 22% 7% / 35%) 0px 10px 38px -10px, hsl(206 22% 7% / 20%) 0px 10px 20px -15px; */
-  /* height: var(--radix-navigation-menu-viewport-height); */
 }
 
-/* .viewportPosition {
-  position: absolute;
+.viewport {
+  align-items: center;
+  background-color: azure;
   display: flex;
+  /* height: 100%; */
   justify-content: center;
-  width: 100%;
-  top: 100%;
-  left: 0;
-  perspective: 2000px;
-} */
+  overflow: hidden;
+}
+
+.content {
+  /* height: 80%; */
+  width: 80%;
+}
 
 .menu {
   all: unset;
-  display: flex;
-  justify-content: space-around;
+  display: grid;
+  gap: 1rem;
+  grid-template-columns: repeat(4, 1fr);
+  /* height: 100%; */
   list-style: none;
-  padding: 1rem;
+  position: relative;
+  width: 100%;
+}
+
+.listItem {
+  align-self: center;
+  /* aspect-ratio: 1 / 1; */
+  justify-self: center;
+  /* position: inherit; */
+}
+
+.image {
+  /* grid-column-start: 1; */
+  /* grid-column-end: 2; */
+  padding: 1rem 0;
+  position: relative;
+  /* object-fit: fill; */
+}
+
+.title {
+  color: white;
+  font-size: 2rem;
+  left: 50%;
+  position: absolute;
+  text-align: center;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
 }
