--- a/components/header/mobile-nav/header-mobile.module.css
+++ b/components/header/mobile-nav/header-mobile.module.css
@@ -1,5 +1,5 @@
 .header {
-  /* align-items: center; */
+  align-items: center;
   display: flex;
   justify-content: space-between;
   /* padding: 0.5rem 1rem; */
