page fetch working

--- a/components/header/header.module.css
+++ b/components/header/header.module.css
@@ -7,7 +7,7 @@
 } */
 
 .header {
-  background-color: lightyellow;
+  background-color: var(--yellow);
   display: flex;
   height: 56px;
   justify-content: space-between;
