--- a/components/home/cover.module.css
+++ b/components/home/cover.module.css
@@ -8,7 +8,7 @@
 }
 
 .overlay {
-  color: white;
+  color: var(--white);
   grid-column-start: 1;
   grid-column-end: 1;
   z-index: 1;
@@ -16,19 +16,23 @@
 
 .title {
   font-size: 3rem;
+  font-weight: 700;
   left: 5vw;
   line-height: 3rem;
   position: relative;
+  text-shadow: 0 0 4px black;
   top: 40vh;
   width: 80vw;
   /* z-index: 3; */
 }
 
 .subtitle {
+  font-weight: 700;
   left: 10vw;
   line-height: 2rem;
   position: relative;
   text-align: right;
+  text-shadow: 0 0 4px black;
   top: 70vh;
   width: 85vw;
 }
@@ -46,4 +50,27 @@
   grid-column-end: 1;
   height: 100%;
   width: 100%;
+}
+
+@media (min-width: 600px) {
+  .title {
+    font-size: 7rem;
+    left: 10vw;
+    line-height: 7rem;
+    top: 30vh;
+    width: 45vw;
+  }
+
+  .subtitle {
+    left: 5vw;
+    line-height: 3rem;
+    top: 50vh;
+  }
+
+  .firstLine {
+    font-size: 3rem;
+  }
+  .secondLine {
+    font-size: 3.5rem;
+  }
 }
