--- a/components/header/desktop-nav/desktop-nav.module.css
+++ b/components/header/desktop-nav/desktop-nav.module.css
@@ -26,14 +26,14 @@
   /* height: 40vh; */
   left: 0;
   position: fixed;
-  top: 58px;
+  top: 56px;
   transform-origin: top center;
   width: 100%;
 }
 
 .viewport {
   align-items: center;
-  background-color: azure;
+  background-color: var(--white);
   display: flex;
   /* height: 100%; */
   justify-content: center;
@@ -73,7 +73,7 @@
 }
 
 .title {
-  color: white;
+  color: var(--white);
   font-size: 2rem;
   left: 50%;
   position: absolute;
@@ -85,7 +85,7 @@
 
 @media (max-width: 1200px) {
   .content {
-    padding: 1rem;
+    padding: 2rem 1rem;
   }
 
   .menu {
