--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -3,7 +3,7 @@
 }
 
 .header {
-  background-color: lightyellow;
+  /* background-color: var(--red); */
   /* left: 0; */
   position: sticky;
   /* right: 0; */
