--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,8 +1,19 @@
+:root {
+  --yellow: hsl(49, 88%, 62%);
+  --blue: hsl(229, 65%, 60%);
+  --red: hsl(348, 48%, 44%);
+  --orange: hsl(36, 89%, 59%);
+  --grey: hsl(280, 5%, 78%);
+  --white: hsl(300, 5%, 96%);
+  --black: hsl(280, 5, 12);
+}
+
 html,
 body {
-  padding: 0;
-  margin: 0;
+  color: var(--black);
   font-family: 'Lato', sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 a {
@@ -10,11 +21,7 @@ a {
   text-decoration: none;
 }
 
-* {
-  box-sizing: border-box;
-}
-
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
@@ -22,4 +29,4 @@ a {
     color: white;
     background: black;
   }
-}
+} */
