--- a/pages/blog/blogPost.module.css
+++ b/pages/blog/blogPost.module.css
@@ -1,16 +1,40 @@
 .cover {
-  align-items: center;
+  /* align-items: center; */
   display: flex;
   flex-direction: column;
-  margin: 0 auto;
+  margin: 5vw auto 0;
   position: relative;
-  width: 80vw;
+  width: 90vw;
 }
 
 .coverImage {
   height: 80vw;
   position: relative;
   width: 100%;
+}
+
+.title {
+  color: var(--white);
+  font-size: 1.8rem;
+  font-weight: 700;
+  padding: 0.5rem 0 0 1rem;
+  position: absolute;
+  text-shadow: 0 0 4px black;
+}
+
+.heading {
+  font-size: 1.5rem;
+  font-style: italic;
+  font-weight: 700;
+  margin: 1rem 0;
+}
+
+.text {
+  padding-left: 5vw;
+}
+
+.paragraph {
+  margin-bottom: 1rem;
 }
 
 @media (min-width: 900) {
