--- a/pages/blog/blogPost.module.css
+++ b/pages/blog/blogPost.module.css
@@ -1,5 +1,4 @@
 .cover {
-  /* align-items: center; */
   display: flex;
   flex-direction: column;
   margin: 5vw auto 0;
@@ -8,7 +7,7 @@
 }
 
 .coverImage {
-  height: 80vw;
+  height: 90vw;
   position: relative;
   width: 100%;
 }
@@ -29,12 +28,13 @@
   margin: 1rem 0;
 }
 
-.text {
-  padding-left: 5vw;
+.text p {
+  /* padding-left: 5vw; */
+  margin-bottom: 1rem;
 }
 
-.paragraph {
-  margin-bottom: 1rem;
+.text p:last-of-type {
+  margin-bottom: 2rem;
 }
 
 @media (min-width: 900) {
