--- a/pages/blog/gallery.module.css
+++ b/pages/blog/gallery.module.css
@@ -2,6 +2,8 @@
   align-items: center;
   display: flex;
   flex-direction: column;
+  margin: 0 auto;
+  max-width: 960px;
   width: 100vw;
 }
 
@@ -12,36 +14,29 @@
 
 .flyer {
   aspect-ratio: 1 / 1.4;
-  margin-block-end: 3rem;
   width: 80%;
 }
 
 .horz {
   aspect-ratio: 1 / 0.667;
-  margin-block-end: 3rem;
   width: 100%;
-}
-
-.horzSm {
-  aspect-ratio: 1 / 0.667;
-  margin-block-end: 3rem;
-  width: 90%;
 }
 
 .vertSlim {
   aspect-ratio: 1 / 1.777;
-  margin-block-end: 3rem;
   width: 75%;
 }
 
 .vert {
   aspect-ratio: 2 / 3;
-  margin-block-end: 3rem;
   width: 90%;
 }
 
-.groupContainer {
+.imageContainer {
   display: flex;
+  justify-content: center;
+  margin-block-end: 3rem;
+  max-height: 90vh;
   width: 100%;
 }
 
@@ -51,18 +46,16 @@
   width: 50%;
 }
 
-.group1 {
-  margin-block-end: 0;
-}
-
-.group2 {
-  margin-block-end: 3rem;
-}
-
 .grp14 {
   aspect-ratio: 3 / 4;
 }
 
 .grp23 {
   aspect-ratio: 2 / 3;
+}
+
+@media (min-width: 768px) {
+  .imageContainer {
+    margin-block-end: 6rem;
+  }
 }
