--- a/components/header/desktop-nav/desktop-nav.module.css
+++ b/components/header/desktop-nav/desktop-nav.module.css
@@ -26,14 +26,14 @@
   /* height: 40vh; */
   left: 0;
   position: fixed;
-  top: 56px;
+  top: 58px;
   transform-origin: top center;
   width: 100%;
 }
 
 .viewport {
   align-items: center;
-  background-color: var(--white);
+  background-color: var(--yellow);
   display: flex;
   /* height: 100%; */
   justify-content: center;
@@ -62,6 +62,11 @@
   /* aspect-ratio: 1 / 1; */
   justify-self: center;
   /* position: inherit; */
+}
+
+.listItem:hover,
+.listItem:focus {
+  border: 6px solid var(--blue);
 }
 
 .image {
