--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,11 +1,15 @@
 :root {
   --yellow: hsl(49, 88%, 62%);
+  --yellow-lt: hsl(49, 88%, 82%);
   --blue: hsl(229, 65%, 60%);
+  --blue-dk: hsl(229, 65%, 40%);
+  --blue-lt: hsl(229, 65%, 70%);
   --red: hsl(348, 48%, 44%);
   --orange: hsl(36, 89%, 59%);
+  --orange-lt: hsl(36, 89%, 79%);
   --grey: hsl(280, 5%, 78%);
   --white: hsl(300, 5%, 96%);
-  --black: hsl(280, 5, 12);
+  --black: hsl(280, 5%, 12%);
 }
 
 html,
