additional cart functionality

--- a/pages/shoes/size-widget.module.css
+++ b/pages/shoes/size-widget.module.css
@@ -18,6 +18,10 @@
   width: 48px;
 }
 
-/* .sizeList:not(.selected) li:hover {
+.selected {
+  background-color: var(--orange);
+}
+
+.item:not(.selected):hover {
   background-color: var(--orange-lt);
-} */
+}
