--- a/components/header/bag.module.css
+++ b/components/header/bag.module.css
@@ -3,8 +3,26 @@
   border: 0;
   cursor: pointer;
   /* display: inline-block; */
-  height: 40px;
+  /* height: 40px; */
   margin: 0;
   margin-left: 15vw;
   padding-block: 0.5rem;
+}
+
+.icon {
+  position: relative;
+}
+
+.mark {
+  background-color: var(--red);
+  border-radius: 50%;
+  color: var(--white);
+  display: block;
+  font-size: 0.7rem;
+  height: 20px;
+  left: -10px;
+  position: absolute;
+  top: -10px;
+  width: 20px;
+  z-index: 10;
 }
