--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,12 +26,26 @@ a {
   text-decoration: none;
 }
 
-/* @media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
-} */
+.button {
+  all: unset;
+  background-color: var(--blue);
+  /* border: 2px solid rgba(0, 0, 0, 0); */
+  border-radius: 20px;
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.75);
+  color: var(--white);
+  cursor: pointer;
+  font-size: 1.2rem;
+  font-weight: 700;
+  height: 40px;
+  padding-inline: 1.5rem;
+}
+
+.button:hover {
+  background-color: var(--blue-dk);
+  /* border: 2px solid var(--orange); */
+}
+
+.button:active {
+  background-color: var(--blue-dk);
+  box-shadow: 0 0 0 rgba(0, 0, 0, 0);
+}
