--- a/pages/cart.module.css
+++ b/pages/cart.module.css
@@ -173,6 +173,62 @@
   position: relative;
 }
 
+.popoverContent {
+  background-color: var(--blue-lt);
+  color: var(--black);
+  padding: 1rem;
+  /* width: 200px; */
+}
+
+.popoverQty {
+  font-size: 1.4rem;
+  font-weight: 700;
+  margin-inline: 1em;
+}
+
+.changeQtyForm {
+  align-items: center;
+  display: flex;
+}
+
+.addInner {
+  display: block;
+  top: 50%;
+  /* margin-top: -2px; */
+  /* transform: rotate(45deg); */
+}
+
+.addInner,
+.addInner::after {
+  width: 40px;
+  height: 4px;
+  background-color: var(--black);
+  border-radius: 2px;
+  position: absolute;
+}
+
+.addInner::after {
+  content: '';
+  display: block;
+  transform: rotate(90deg);
+}
+
+.subtractInner {
+  display: block;
+  top: 50%;
+  /* margin-top: -2px; */
+  /* transform: rotate(45deg); */
+}
+
+.subtractInner,
+.subtractInner::after {
+  width: 40px;
+  height: 4px;
+  background-color: var(--black);
+  border-radius: 2px;
+  position: absolute;
+}
+
 .total {
   align-items: baseline;
   display: flex;
