--- a/pages/cart/cart-item.module.css
+++ b/pages/cart/cart-item.module.css
@@ -4,13 +4,10 @@
 }
 
 .item {
-  /* align-items: center; */
   border: 1px solid var(--grey);
-  /* cursor: pointer; */
   display: flex;
   gap: 0.5rem;
   height: 100%;
-  /* margin-left: 1rem; */
   padding: 0.5rem;
   padding-right: 0;
 }
@@ -27,7 +24,6 @@
   display: flex;
   flex: 1 1 1;
   gap: 1rem;
-  /* height: 100%; */
   justify-content: space-between;
   width: 100%;
 }
@@ -35,15 +31,10 @@
 .info {
   align-content: space-between;
   display: flex;
-  /* flex: 1 0 0; */
   flex-direction: column;
   height: 100%;
   justify-content: space-between;
   line-height: 1;
-}
-
-.nameSize {
-  /* flex: 1; */
 }
 
 .name {
@@ -58,11 +49,8 @@
 }
 
 .price {
-  /* flex: 2; */
   font-size: 1.4rem;
   font-weight: 300;
-  /* line-height: 1; */
-  /* padding-top: 1rem; */
 }
 
 .itemActions {
@@ -89,7 +77,7 @@
   background-color: var(--grey);
 }
 
-.removeBox {
+.iconBox {
   width: 40px;
   height: 40px;
   display: inline-block;
@@ -99,7 +87,6 @@
 .removeInner {
   display: block;
   top: 50%;
-  /* margin-top: -2px; */
   transform: rotate(45deg);
 }
 
@@ -155,6 +142,7 @@
 }
 
 .popoverQty {
+  color: var(--blue);
   font-size: 1.8rem;
   font-weight: 700;
   margin-inline: 0.5em;
@@ -165,15 +153,13 @@
   display: flex;
 }
 
-.addInner {
+.inner {
   display: block;
   top: 50%;
-  /* margin-top: -2px; */
-  /* transform: rotate(45deg); */
 }
 
-.addInner,
-.addInner::after {
+.inner,
+.inner::after {
   width: 40px;
   height: 4px;
   background-color: var(--black);
@@ -185,22 +171,6 @@
   content: '';
   display: block;
   transform: rotate(90deg);
-}
-
-.subtractInner {
-  display: block;
-  top: 50%;
-  /* margin-top: -2px; */
-  /* transform: rotate(45deg); */
-}
-
-.subtractInner,
-.subtractInner::after {
-  width: 40px;
-  height: 4px;
-  background-color: var(--black);
-  border-radius: 2px;
-  position: absolute;
 }
 
 .qty {
@@ -226,20 +196,12 @@
     font-size: 1.2rem;
     margin-top: 0.5rem;
   }
-
-  /* .popoverQty {
-    margin-inline: 1em;
-  } */
 }
 
 @media (min-width: 900px) {
   .itemContainer {
     height: 25vh;
   }
-
-  /* .item {
-    margin-right: 15vh;
-  } */
 
   .name {
     font-size: 1.4rem;
