--- a/components/alert.module.css
+++ b/components/alert.module.css
@@ -12,11 +12,15 @@
   color: var(--black);
   padding: 1rem;
 
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+
   position: fixed;
-  top: 50%;
+  top: 33%;
   left: 50%;
-  transform: translate(-50%, -50%);
-  width: 300px;
+  transform: translateX(-50%);
+  width: auto;
 }
 
 .cancel {
