--- a/components/footer/footer.module.css
+++ b/components/footer/footer.module.css
@@ -28,7 +28,15 @@
 }
 
 .signup {
-  max-width: 320px;
+  margin-top: 1rem;
+}
+
+.email {
+  /* border: 1px solid black; */
+  /* box-sizing: border-box; */
+  height: 40px;
+  padding: 0;
+  width: 320px;
 }
 
 .ctaInfo {
@@ -38,12 +46,9 @@
 .form {
   display: flex;
   flex-direction: column;
+  gap: 0.5rem;
   /* grid-template-columns: 2fr 1fr; */
-}
-
-.btn {
   margin-top: 0.5rem;
-  max-width: fit-content;
 }
 
 @media (min-width: 600px) {
@@ -51,8 +56,13 @@
     max-width: 60%;
   }
 
-  .btn {
+  /* .btn {
     font-size: 1rem;
     height: auto;
+  } */
+
+  .form {
+    align-items: center;
+    flex-direction: row;
   }
 }
