--- a/components/toast.module.css
+++ b/components/toast.module.css
@@ -1,23 +1,21 @@
 .viewport {
   all: unset;
-  left: 50%;
+  bottom: 0;
   list-style: none;
-  margin-right: 1rem;
+  margin: 1rem;
   position: fixed;
-  top: 25%;
-  transform: translateX(-50%);
-  width: max-content;
+  right: 0;
+  width: fit-content;
   z-index: 9;
 }
 
 .root {
-  align-items: center;
-  background-color: var(--white);
-  border: 1px solid var(--blue);
-  box-shadow: 0 0 4px rgba(0, 0, 0, 0.75);
-  color: var(--black);
+  background-color: var(--blue-dk);
+  box-shadow: var(--shadow);
+  color: var(--white);
   display: flex;
   flex-direction: column;
+  font-weight: 700;
   justify-content: center;
   padding: 1rem;
 }
