--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,8 @@
   --grey: hsl(280, 5%, 78%);
   --white: hsl(300, 5%, 96%);
   --black: hsl(280, 5%, 12%);
+
+  --shadow: 0 0 4px rgba(0, 0, 0, 0.75);
 }
 
 html,
@@ -39,6 +41,7 @@ a {
   font-size: 1.2rem;
   font-weight: 700;
   height: 40px;
+  max-width: fit-content;
   padding-inline: 1.5rem;
   text-align: center;
 }
