--- a/pages/404.module.css
+++ b/pages/404.module.css
@@ -1,6 +1,49 @@
 .notFound {
   height: 100vh;
+}
+
+.background {
+  filter: brightness(0.75);
+  height: 100%;
   position: relative;
-  top: -56px;
+  top: 0;
+  width: 100vw;
+}
+
+.foreground {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  margin-top: 15vh;
+  position: absolute;
+  top: 0;
   width: 100%;
+}
+
+.glyph {
+  transform: scale(1);
+}
+
+.text {
+  color: var(--white);
+  font-size: 1.5rem;
+  font-weight: 700;
+  line-height: 1.8rem;
+  text-align: center;
+  text-shadow: var(--shadow);
+}
+
+.text p:first-child {
+  margin-bottom: 1rem;
+}
+
+@media (min-width: 600px) {
+  .foreground {
+    gap: 2.5rem;
+  }
+
+  .glyph {
+    transform: scale(1.5);
+  }
 }
