--- a/components/home/product-carousel.module.css
+++ b/components/home/product-carousel.module.css
@@ -1,100 +1,36 @@
 .carouselContainer {
-  /* display: grid; */
-  /* grid-template-columns: 1fr; */
+  margin-bottom: 1rem;
   position: relative;
   width: 100%;
-}
-
-.swiper {
-  /* position: relative; */
-  /* width: 100%; */
 }
 
 .slide {
   flex: 1;
 }
 
-.carousel {
-  display: flex;
-  gap: 1vw;
-  /* left: -90px; */
-  margin-bottom: 1rem;
-  /* overflow: auto; */
-  overscroll-behavior: contain;
-  transform: translateX(-90px);
-  width: 100%;
+.swiperSlide {
+  display: block;
 }
 
-.image {
-  aspect-ratio: 1 / 1;
-  height: auto;
-  position: relative;
-  width: 180px;
-}
-
-.arrowContainer {
-  align-items: center;
-  display: flex;
-  justify-content: space-between;
-  /* background-color: rgba(0, 0, 0, 0.5); */
+.slideImage {
+  aspect-ratio: 1/1;
   height: 180px;
-  padding-inline: 1rem;
-  position: absolute;
-  width: 100%;
-  z-index: 2;
 }
 
-.arrowBtn {
-  all: unset;
-  /* background: rgba(0, 0, 0, 0.4); */
-  /* border: none; */
-  /* border-radius: 4px; */
-  /* cursor: pointer; */
-  height: 100%;
-  /* padding-block: auto; */
-  /* position: absolute; */
-  /* width: 48px; */
-  /* z-index: 8; */
+@media (min-width: 768px) {
+  .slideImage {
+    height: 192px;
+  }
 }
 
-.arrow {
-  align-items: center;
-  display: flex;
-  height: 48px;
-  justify-content: center;
-  width: 48px;
+@media (min-width: 1020px) {
+  .slideImage {
+    height: 204px;
+  }
 }
 
-.arrowR {
-  transform: rotate(180deg);
+@media (min-width: 1296px) {
+  .slideImage {
+    height: calc(100vw / 6);
+  }
 }
-
-/* .arrowBox {
-  width: 40px;
-  height: 80px;
-  display: inline-block;
-  position: relative;
-} */
-
-/* .arrowInner {
-  display: block;
-  top: 33%;
-  transform: rotate(45deg);
-} */
-
-/* .arrowInner,
-.arrowInner::after {
-  width: 40px;
-  height: 4px;
-  background-color: var(--red);
-  border-radius: 2px;
-  position: absolute;
-} */
-
-/* .arrowInner::after {
-  content: '';
-  display: block;
-  left: 20px;
-  top: 20px;
-  transform: rotate(90deg);
-} */
