--- a/styles/globals.css
+++ b/styles/globals.css
@@ -55,3 +55,10 @@ a {
   background-color: var(--blue-dk);
   box-shadow: 0 0 0 rgba(0, 0, 0, 0);
 }
+
+.swiper .swiper-button-prev,
+.swiper .swiper-button-next {
+  color: var(--yellow);
+  font-weight: 700;
+  text-shadow: var(--shadow);
+}
