--- a/components/alert.module.css
+++ b/components/alert.module.css
@@ -6,7 +6,7 @@
 
 .content {
   background-color: var(--white);
-  border: 3px solid var(--orange);
+  border: 3px solid var(--white);
   border-radius: 8px;
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.75);
   color: var(--black);
