--- a/styles/globals.css
+++ b/styles/globals.css
@@ -33,14 +33,14 @@ a {
 .button {
   all: unset;
   background-color: var(--blue);
-  /* border: 2px solid rgba(0, 0, 0, 0); */
+  border: 2px solid var(--blue);
   border-radius: 20px;
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.75);
   color: var(--white);
   cursor: pointer;
   font-size: 1.2rem;
   font-weight: 700;
-  height: 40px;
+  height: 36px;
   max-width: fit-content;
   padding-inline: 1.5rem;
   text-align: center;
@@ -54,6 +54,10 @@ a {
 .button:active {
   background-color: var(--blue-dk);
   box-shadow: 0 0 0 rgba(0, 0, 0, 0);
+}
+
+.button:focus {
+  border: 2px solid var(--orange);
 }
 
 .swiper .swiper-button-prev,
