--- a/pages/shoes/size-widget.module.css
+++ b/pages/shoes/size-widget.module.css
@@ -1,27 +1,33 @@
 .sizeList {
   all: unset;
   display: flex;
-  /* gap: 1rem; */
   justify-content: space-between;
   list-style: none;
 }
 
-.sizeList li {
+.sizeBtn {
+  all: unset;
+
   align-items: center;
-  border: 1px solid var(--black);
+  border: 1px solid var(--grey);
   cursor: pointer;
   display: flex;
   font-size: 2rem;
   font-weight: 300;
-  justify-content: center;
   height: 48px;
+  justify-content: center;
   width: 48px;
+}
+
+.sizeBtn:focus {
+  background-color: var(--orange-lt);
+  border: 1px solid var(--orange);
 }
 
 .selected {
   background-color: var(--orange);
 }
 
-.item:not(.selected):hover {
+.sizeBtn:not(.selected):hover {
   background-color: var(--orange-lt);
 }
