--- a/pages/all-shoes.module.css
+++ b/pages/all-shoes.module.css
@@ -1,30 +1,27 @@
 .catalogPage {
   display: flex;
-  flex-direction: column;
-  margin: 0 auto;
+  justify-content: center;
   max-width: 1440px;
-  padding: 1rem;
+}
+
+.container {
+  display: grid;
+  gap: 4px;
+  grid-template-columns: repeat(auto-fill, 332px);
+  margin: 2rem;
+  width: 100%;
 }
 
 .header {
+  grid-column: 1/-1;
 }
 
 .title {
-  flex-basis: fit-content;
   font-size: 1.5rem;
   font-weight: 700;
-  margin-bottom: 1rem;
 }
 
-.description {
-  margin-bottom: 2rem;
-  max-width: 60ch;
-}
-
-.productList {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 4px;
-  justify-content: center;
-  padding: 1rem 0 3rem;
+.sorter {
+  grid-column: 1/-1;
+  margin-left: auto;
 }
